--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ You can also visit (link: &quot;my professional website&quot;)[(open-url: &quot;
 [[Start over|frukost1]]</tw-passagedata><tw-passagedata pid="24" name="speech1" tags="" position="673.5,784.5" size="100,100">As you head back into the center of the square you see that some sort of [[speech|speech2]] is starting.</tw-passagedata><tw-passagedata pid="25" name="speech2" tags="" position="391.5,763" size="100,100">The mayor of the town begins a long, boring speech. You try to listen but are distracted by the [[sight of someone|speech3]] in the distance. </tw-passagedata><tw-passagedata pid="26" name="kanelbulle" tags="" position="685.5,199" size="100,100">You gotta get the recipe for these!
 
 [[Go back|frukost1]]</tw-passagedata><tw-passagedata pid="27" name="bonfire2" tags="" position="978.5,1095" size="100,100">(set: $couple to 1)
-&quot;Benny ar död! Är du glad?&quot; He asks her.
+&quot;Benny ar död! Är du glad?&quot; He asks her with a smile.
 
 She frowns, &quot;Benny var inte en bra man. Men att dö är alltid synd!&quot;
 
@@ -194,7 +194,7 @@ She frowns, &quot;Benny var inte en bra man. Men att dö är alltid synd!&quot;
 He is sitting in the front pew, murmuring to himself.
 
 [[Listen more closely|kyrken3]]</tw-passagedata><tw-passagedata pid="31" name="godnatt" tags="" position="544.5,36" size="100,100">You wake up in the middle of the night.</tw-passagedata><tw-passagedata pid="32" name="man" tags="" position="1108.5,1095" size="100,100">(set: $man to 1)
-&quot;Jag älskar flammarna! Så vackra!&quot; he says to you in a trance.
+&quot;Jag älskar flammarna! Så vackra!&quot; he says to you in a trance, the flames reflecting in his eyes.
 
 (if: $couple is 0)[[[Alrighty then|bonfire]]]
 
