--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@ Before he can continue, Lotta comes in the front door with the morning paper, &q
 
 &quot;BIG BENNY ÄR DÖD!&quot;
 
-&quot;Mörd!&quot; Lotta exclaims.
+&quot;Mord!&quot; Lotta exclaims.
 
 The look on her face says it all.
 
-[[&quot;Mörd?!&quot;|frukost3]]</tw-passagedata><tw-passagedata pid="3" name="frukost4" tags="" position="1276.5,207" size="100,100">You decide to share your theories with Lotta, &quot;There are three suspects,&quot; you begin before remembering she doesn&#39;t speak English, &quot;Um...det finns tre personer som kanske är mördare.&quot; 
+[[&quot;Mord?!&quot;|frukost3]]</tw-passagedata><tw-passagedata pid="3" name="frukost4" tags="" position="1276.5,207" size="100,100">You decide to share your theories with Lotta, &quot;There are three suspects,&quot; you begin before remembering she doesn&#39;t speak English, &quot;Um...det finns tre personer som kanske är mördare.&quot; 
 
 &quot;Vem?&quot; She asks you, her interest piqued.
 
@@ -180,7 +180,7 @@ The article explains how his body was found under the thawing snow on a nearby h
 
 You can see Lotta&#39;s brain begin running in overdrive as her detective instinct kicks in. Who did it?
 
-[[&quot;Kanske det är...&quot;|frukost4]]</tw-passagedata><tw-passagedata pid="30" name="speech3" tags="" position="374.5,1158.5" size="100,100">(set: $suspect to 0)Suddenly, you hear a loud CRACK as the bonfire collapses onto the square. Everyone manages to jump out of the way, but one huge timber log rolls into the stage, smashing it into pieces and sending the police chief flying to the ground. 
+[[&quot;Kanske är det...&quot;|frukost4]]</tw-passagedata><tw-passagedata pid="30" name="speech3" tags="" position="374.5,1158.5" size="100,100">(set: $suspect to 0)Suddenly, you hear a loud CRACK as the bonfire collapses onto the square. Everyone manages to jump out of the way, but one huge timber log rolls into the stage, smashing it into pieces and sending the police chief flying to the ground. 
 
 This cannot be a coincidence, it must have been done by someone as a distraction. The dozens of people in the crowd start to flee the scene but among them you see Lars running towards the church, Annika into her shop, and Frederik towards the river.
 
